--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <html lang ="en">
  <!-- This is a comment! -->
  <head>
+   <link rel="stylesheet" type="text/css" href="style.css">
+   <title>Cat Perry's Favorite Cats</title>
  </head>
  <body>
    
